
cmake_minimum_required(VERSION 3.22)

project(TMC_API)
add_library(TMC_API INTERFACE)

# Enable CMake support for ASM and C languages
enable_language(C ASM)


message("TMC_API integration by:
Andrii Dobrus
Git: https://github.com/MuffinKing-jpeg")

# Add base functions in to the toolchain
set(TMC_API_INCLUDES)
list(APPEND TMC_API_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/TMC_API/tmc/helpers)

set(TMC_API_SRC_FILES)
file(GLOB TMC_API_HELPER_SRC ${CMAKE_CURRENT_SOURCE_DIR}/TMC_API/tmc/helpers/*.c)
list(APPEND TMC_API_SRC_FILES ${TMC_API_HELPER_SRC})

# Add ramp function
if(ENABLE_RAMP)
message("Ramp enabled")
    file(GLOB TMC_API_HELPER_SRC ${CMAKE_CURRENT_SOURCE_DIR}/TMC_API/tmc/ramp/*.c)
    list(APPEND TMC_API_SRC_FILES ${TMC_API_RAMP_SRC})
    list(APPEND TMC_API_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/TMC_API/tmc/ramp)
endif()

# Choose platform
if(USE_HAL_DRIVER)
message("TMC_DRIVERS with STM32 HAL")
    file(GLOB TMC_API_STM32_HAL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/platform/stm32/HAL/Src/*.c)
    list(APPEND TMC_API_SRC_FILES ${TMC_API_STM32_HAL_SRC})
    list(APPEND TMC_API_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/platform/stm32/HAL/Inc)
endif()

# Select IC

# MAX22216
if(TMC_API_ENABLE_MAX22216)
message("MAX22216 enabled")
    file(GLOB TMC_API_MAX22216_SRC ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/MAX22216/*.c)
    list(APPEND TMC_API_SRC_FILES ${TMC_API_MAX22216_SRC})
    list(APPEND TMC_API_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/MAX22216)
endif()

# TMC262
if(TMC_API_ENABLE_TMC262)
message("TMC262 enabled")
    file(GLOB TMC_API_TMC262_SRC ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC262/*.c)
    list(APPEND TMC_API_SRC_FILES ${TMC_API_TMC262_SRC})
    list(APPEND TMC_API_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC262)
endif()

# TMC2130
if(TMC_API_ENABLE_TMC2130)
message("TMC2130 enabled")
    file(GLOB TMC_API_TMC2130_SRC ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2130/*.c)
    list(APPEND TMC_API_SRC_FILES ${TMC_API_TMC2130_SRC})
    list(APPEND TMC_API_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2130)
endif()

# TMC2160
if(TMC_API_ENABLE_TMC2160)
message("TMC2130 enabled")
    file(GLOB TMC_API_TMC2160_SRC ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2160/*.c)
    list(APPEND TMC_API_SRC_FILES ${TMC_API_TMC2160_SRC})
    list(APPEND TMC_API_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2160)
endif()

# TMC2208
if(TMC_API_ENABLE_TMC2208)
message("TMC2130 enabled")
    file(GLOB TMC_API_TMC2208_SRC ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2208/*.c)
    list(APPEND TMC_API_SRC_FILES ${TMC_API_TMC2208_SRC})
    list(APPEND TMC_API_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2208)
endif()

# TMC2209
if(TMC_API_ENABLE_TMC2209)
message("TMC2130 enabled")
    file(GLOB TMC_API_TMC2209_SRC ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2209/*.c)
    list(APPEND TMC_API_SRC_FILES ${TMC_API_TMC2209_SRC})
    list(APPEND TMC_API_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2209)
endif()

# TMC2224
if(TMC_API_ENABLE_TMC2224)
message("TMC2130 enabled")
    file(GLOB TMC_API_TMC2224_SRC ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2224/*.c)
    list(APPEND TMC_API_SRC_FILES ${TMC_API_TMC2224_SRC})
    list(APPEND TMC_API_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2224)
endif()

# TMC2225
if(TMC_API_ENABLE_TMC2225)
message("TMC2130 enabled")
    file(GLOB TMC_API_TMC2225_SRC ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2225/*.c)
    list(APPEND TMC_API_SRC_FILES ${TMC_API_TMC2225_SRC})
    list(APPEND TMC_API_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2225)
endif()

# TMC2226
if(TMC_API_ENABLE_TMC2226)
message("TMC2130 enabled")
    file(GLOB TMC_API_TMC2226_SRC ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2226/*.c)
    list(APPEND TMC_API_SRC_FILES ${TMC_API_TMC2226_SRC})
    list(APPEND TMC_API_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2226)
endif()

# TMC2240
if(TMC_API_ENABLE_TMC2240)
message("TMC2130 enabled")
    file(GLOB TMC_API_TMC2240_SRC ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2240/*.c)
    list(APPEND TMC_API_SRC_FILES ${TMC_API_TMC2240_SRC})
    list(APPEND TMC_API_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMC2240)
endif()

# TMCxxx
if(TMC_API_ENABLE_TMCxxx)
message("TMCxxx enabled")
    file(GLOB TMC_API_TMCxxx_SRC ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMCxxx/*.c)
    list(APPEND TMC_API_SRC_FILES ${TMC_API_TMCxxx_SRC})
    list(APPEND TMC_API_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/TMC-API/tmc/ic/TMCxxx)
endif()

# Put it together

target_include_directories(TMC_API INTERFACE
    ${TMC_API_INCLUDES}
)

target_sources(TMC_API PUBLIC
    ${TMC_API_SRC_FILES}
    # Add user sources here
)

target_link_directories(TMC_API INTERFACE
)

target_link_libraries(TMC_API INTERFACE
)

# Validate that STM32CubeMX code is compatible with C standard
if(CMAKE_C_STANDARD LESS 11)
    message(ERROR "Generated code requires C11 or higher")
endif()
